# masc

./: .coderabbit.yaml  .comment-body.md  .commit-msg.txt  .dockerignore  .gitignore  .masc  .ocamlformat  .pr21658-comment.md  .railwayignore  .sangsu-push-test  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.keeper-sandbox  Dockerfile.oneclick  Dockerfile.worker  Dockerfile.worker-runtime  EIO_REFACTOR_ISSUES.md  EVOLUTION_PLAN_FIGMA_MCP.md  IMPROVEMENT-BACKLOG.md  ISSUE-3015-STATUS.md  ISSUE-3015-SUMMARY.md  ISSUES-TO-CLOSE.md  LICENSE  Makefile  PLAN.md  PR-BODY.md  PR-CHANGES.md  PROOF-lifecycle-task-437.md  PROOF-lifecycle-task-438.md  PROOF_TASK_441.md  PROOF_TASK_445.md  README.ko.md  README.md  RELIABILITY-AUDIT.md  ROADMAP.md  SECURITY-AUDIT.md  VERIFIER_GH_TEST.md  (+86 more)
lib/: DO_NOT_OPTIMIZE.md  a2a_tools.ml  a2a_tools.mli  a2a_types.ml  a2a_types.mli  activity_feed.ml  activity_feed.mli  activity_graph.ml  activity_graph.mli  activity_graph_registry.ml  activity_graph_types.ml  adaptive_thresholds.ml  adaptive_thresholds.mli  admission_queue.ml  admission_queue.mli  admission_queue_metrics.ml  admission_queue_metrics.mli  ag_ui.ml  agent_card.ml  agent_card.mli  agent_economy.ml  agent_economy.mli  agent_ecosystem.ml  agent_ecosystem.mli  agent_health.ml  agent_health.mli  agent_identity.ml  agent_identity.mli  agent_name_kind.ml  agent_name_kind.mli  agent_neo4j.ml  agent_neo4j.mli  agent_permanence.ml  agent_permanence.mli  agent_planner.ml  agent_planner.mli  agent_registry_eio.ml  agent_registry_eio.mli  agent_reputation.ml  agent_reputation.mli  (+2024 more)
lib/activity_graph/: activity_graph.ml  activity_graph.mli  activity_graph_reducer.ml  activity_graph_reducer.mli  activity_graph_registry.ml  activity_graph_registry.mli  activity_graph_types.ml  activity_graph_types.mli  dune
lib/ag_ui/: ag_ui.ml  ag_ui.mli  dune
lib/agent_economy/: agent_economy.ml  agent_economy.mli  dune
lib/agent_observation/: agent_observation.ml  agent_observation.mli  dune
lib/attribution/: attribution.ml  attribution.mli  attribution_tagged.ml  attribution_tagged.mli  dune  tool_input_path.ml  tool_input_path.mli
lib/auth/: auth.ml  auth.mli  auth_credential_base.ml  auth_credential_base.mli  auth_credential_token.ml  auth_credential_token.mli  auth_error_kind.ml  auth_error_kind.mli  auth_error_kind_leaf.ml  auth_error_kind_leaf.mli  auth_leaf.ml  auth_leaf.mli  auth_login.ml  auth_login.mli  auth_metric_store.ml  auth_nickname.ml  auth_nickname.mli  auth_strict_mode.ml  auth_strict_mode.mli  dune  silent_dashboard_actor_outcome_leaf.ml  silent_dashboard_actor_outcome_leaf.mli
lib/autonomous/: autonomous_bridge.ml  autonomous_bridge.mli  autonomous_executor.ml  autonomous_executor.mli  autonomous_phase.ml  autonomous_phase.mli  autonomous_state.ml  autonomous_state.mli  dune  stimulus.ml  stimulus.mli  wirein_helpers.ml  wirein_helpers.mli
lib/autoresearch/: autoresearch_file.ml  autoresearch_file.mli  autoresearch_git.ml  autoresearch_git.mli  autoresearch_metric.ml  autoresearch_metric.mli  autoresearch_serde.ml  autoresearch_serde.mli  autoresearch_storage.ml  autoresearch_storage.mli  autoresearch_types.ml  autoresearch_types.mli  dune
lib/backend/: backend.ml  backend.mli  backend_compression.ml  backend_compression.mli  backend_core.ml  backend_eio.ml  backend_eio_pg.ml  backend_eio_types.ml  backend_memory.ml  backend_memory.mli  backend_pg.ml  backend_pg_url.ml  backend_types.ml  backend_types.mli  dune  pg_infix.ml  pg_utils.ml  task_pg.ml
lib/board/: board.ml  board.mli  board_agent_effect_hooks.ml  board_agent_effect_hooks.mli  board_attachment_meta.ml  board_attachment_meta.mli  board_audience.ml  board_audience.mli  board_claim_evidence.ml  board_claim_evidence.mli  board_comment_rate_limit.ml  board_comment_rate_limit.mli  board_core.ml  board_core.mli  board_core_classify.ml  board_core_classify.mli  board_core_json.ml  board_core_json.mli  board_core_payload.ml  board_core_payload.mli  board_core_persist.ml  board_core_persist.mli  board_core_status_rollup.ml  board_core_status_rollup.mli  board_curation.ml  board_curation.mli  board_dispatch.ml  board_dispatch.mli  board_diversity.ml  board_diversity.mli  board_effect_hooks.ml  board_effect_hooks.mli  board_listener.ml  board_mention_backfill.ml  board_mention_backfill.mli  board_metrics_hooks.ml  board_metrics_hooks.mli  board_moderation.ml  board_moderation.mli  board_paths.ml  (+21 more)
lib/board_addressing/: board_addressing.ml  board_addressing.mli  dune
lib/board_tool_adapter/: board_claim_gate.ml  board_claim_gate.mli  board_tool.ml  board_tool.mli  board_tool_cache.ml  board_tool_cache.mli  board_tool_curation.ml  board_tool_curation.mli  board_tool_dispatch.ml  board_tool_dispatch.mli  dune  (+12 more)
proto/: dune  grpc_health_v1.proto  masc.proto  masc_coordination.proto  masc_workspace.proto
test/: Dockerfile.benchmark  bench_private_jsonl_stable_lock.ml  compaction_exact_output_fixture.ml  dune  eval_grounding_dry_run.ml  eval_memory_os_value.ml  keeper_tool_matrix_case_runner.ml  masc_dirname_ssot_baseline.txt  memory_os_brain_harness.ml  memory_quality_eval.ml  shell_parse_site_baseline.txt  test_a12_e2e_demo.ml  test_a2a_distributed.ml  test_a2a_e2e.ml  test_a2a_tools_coverage.ml  test_accountability_emit_skip_10314.ml  test_actionable_path_action.ml  test_activity_feed.ml  test_activity_graph.ml  test_actor_mailbox.ml  test_adaptive_cache_ttl.ml  test_adaptive_thresholds.ml  test_admission_fd_gate.ml  test_admission_queue_coverage.ml  test_adversarial_eval.ml  test_advisory_only_affordance_never_drives_wake.ml  test_ag_ui_coverage.ml  test_agent_card_coverage.ml  test_agent_economy.ml  test_agent_ecosystem.ml  test_agent_health.ml  test_agent_identity.ml  test_agent_neo4j.ml  test_agent_observation_bridge.ml  test_agent_planner_coverage.ml  test_agent_registry_eio.ml  test_agent_reputation.ml  test_agent_stress.ml  test_agent_stress_emit_10341.ml  test_agent_stress_timeout_wire_10341.ml  (+1932 more)
test_lib/: ast_grep.ml  dune
viewer/: .gitignore  Cargo.toml  Trunk.toml  index.html  style.css
(+17698 files in other folders)
