(dirs
 (:standard
  \
  .worktrees
  worktrees
  _build_codex_trpg
  archive
  dashboard_bonsai))

(env
 (dev
  (flags
   (:standard -warn-error +8)))
 (release
  (flags
   (:standard -warn-error +8))))

; Build-time check: reject OPERATOR_TODO placeholders in persona profiles.
; Runs automatically with `dune build @check` — no more opt-in alias.
(rule
 (alias @check)
 (deps
  (source_tree config/personas))
 (action
  (run scripts/ci/check-persona-profile-placeholders.sh config/personas)))
