(dirs
 (:standard
  \
  .worktrees
  worktrees
  _build_codex_trpg
  archive
  dashboard_bonsai))

(env
 (dev
  (flags
   (:standard -warn-error +8)))
 (release
  (flags
   (:standard -warn-error +8))))

; Build-time check: reject OPERATOR_TODO placeholders in source code.
; This prevents deployment of code with unresolved placeholders.
(rule
 (alias all)
 (deps
  (source_tree .))
 (action
  (run scripts/ci/check-persona-profile-placeholders.sh .)))
