(lang dune 3.17)

(name masc_mcp)
(version 2.261.0)

(generate_opam_files true)
(implicit_transitive_deps false)

(source
 (github jeong-sik/masc-mcp))

(authors "Jeongsik Yun")

(maintainers "Jeongsik Yun")

(license MIT)

(documentation https://github.com/jeong-sik/masc-mcp)

(package
 (name masc_mcp)
 (synopsis "Multi-Agent Streaming Coordination MCP Server in OCaml")
 (description "MASC Protocol: File-based coordination for Claude, Gemini, and Codex agents")
 (depends
  (ocaml (>= 5.4))
  (dune (>= 3.17))
  ; External dependencies (opam pin)
  (mcp_protocol (>= 1.3.0))
  (ocaml-webrtc (>= 0.2.3))
  (grpc-direct-core (>= 0.1.0))
  (grpc-direct (>= 0.1.0))
  ; Standard dependencies
  (re (>= 1.10))
  (yojson (>= 2.0))
  (graphql (>= 0.14.0))
  (graphql_parser (>= 0.14.0))
  (cmdliner (>= 1.1))
  (cohttp (>= 5.0))
  (cohttp-eio (>= 6.0))
  (agent_sdk (>= 0.116.1))
  (uri (>= 4.4))
  (tls (>= 2.0))
  (tls-eio (>= 2.0))
  (domain-name (>= 0.4))
  (ca-certs (>= 0.2))
  (ppx_deriving_yojson (>= 3.6))
  (ppx_deriving (>= 5.2))
  (sqlite3 (>= 5.1))
  (mirage-crypto (>= 1.0))
  (mirage-crypto-rng (>= 1.0))
  (ctypes (>= 0.20))
  (ctypes-foreign (>= 0.20))
  (integers (>= 0.7))
  (zstd (>= 0.4))
  (httpun (>= 0.2))
  (httpun-eio (>= 0.2))
  (httpun-ws (>= 0.2))
  (httpun-ws-eio (>= 0.2))
  (bigstringaf (>= 0.10))
  (caqti (>= 2.1))
  (caqti-eio (>= 2.1))
  (caqti-driver-postgresql (>= 2.1))
  (eio (>= 1.0))
  (eio_main (>= 1.0))
  (eio_posix (>= 0.16))
  (cstruct (>= 6.0))
  (digestif (>= 1.1))
  (ocaml-protoc-plugin (>= 4.0))
  (pbrt (and (>= 3.0) (< 4.0)))
  (pbrt_services (and (>= 3.0) (< 4.0)))
  (h2 (>= 0.13))
  (h2-eio (>= 0.13))
  (alcotest (and :with-test (>= 1.6)))
  (qcheck-core (and :with-test (>= 0.21)))
  (qcheck-alcotest (and :with-test (>= 0.21)))
  (bisect_ppx (and :with-test (>= 2.8)))
  (mtime (>= 2.0))
  (uuidm (>= 0.9))
  ; Neo4j Bolt native driver
  (neo4j_bolt_eio (>= 0.4))
  ; OpenTelemetry observability + OTLP exporter
  (opentelemetry (>= 0.13))
  (ambient-context-eio (>= 0.2))))
