(include_subdirs unqualified)

(library
 (name masc)
 (public_name masc)
 (private_modules
  cli_arg
  http_body_buffer
  http_response_payload
  error_event_type
  keeper_tool_call_log_route_evidence
  keeper_world_observation_board_signal
  keeper_world_observation_continuity
  keeper_world_observation_inputs
  keeper_world_observation_message_scope
  keeper_event_bus_drain_site
  sse_jsonrpc_filter
  keeper_tool_call_log_context
  board_metric_hooks_adapter
  workspace_metric_hooks
  keeper_types_profile_persona
  keeper_types_profile_persona_defaults
  keeper_types_profile_oas_env
  keeper_types_profile_defaults
  keeper_types_profile
  keeper_meta_contract
  keeper_personality_io
  keeper_meta_json_parse
  keeper_meta_json
  keeper_types_support
  keeper_meta_store
  keeper_tool_descriptor
  keeper_tool_descriptor_resolution
  keeper_tool_runtime
  keeper_tool_registry
  keeper_tool_resolution
  keeper_tool_affinity
  keeper_tool_shared_runtime
  keeper_tool_board_runtime
  keeper_tool_filesystem_runtime
  keeper_tool_registered_runtime
  keeper_tool_ide_runtime
  keeper_secret_projection
  keeper_secret_redaction
  keeper_sandbox_docker
  keeper_tool_execute_runtime_paths
  keeper_tool_execute_path
  keeper_workspace_read_ops
  keeper_tool_execute_input
  keeper_tool_execute_runtime
  keeper_workspace_ops
  keeper_tool_command_runtime
  keeper_activation_readiness
  keeper_tool_task_runtime
  keeper_tool_voice_runtime
  keeper_tool_dispatch_runtime
  keeper_status_metrics
  keeper_status_runtime
  keeper_status_detail_observability
  keeper_status_detail
  keeper_tool_persona_runtime
  keeper_model_labels
  keeper_fs
  keeper_identity
  keeper_current_task_reconcile
  keeper_checkpoint_store
  keeper_registry_orphan_drops
  keeper_registry_spawn_slots
  keeper_registry_error_tracking
  keeper_text_processing
  keeper_summarizer
  keeper_context_core_message_json
  keeper_context_core_history
  keeper_context_core
  keeper_compact_policy
  keeper_compact_audit
  keeper_rollover
  keeper_approval_queue
  keeper_post_turn
  keeper_tool_progress
  keeper_tool_query
  keeper_tool_selection
  keeper_tool_capability_axis
  keeper_turn_telemetry
  keeper_agent_prompt_metrics
  keeper_agent_tool_surface
  keeper_agent_run_phase0_telemetry
  keeper_agent_run_post_turn_memory
  keeper_agent_run_phase5_task_link
  keeper_agent_run_contract_helpers
  keeper_agent_run_response_text
  keeper_agent_run_thinking_trajectory
  keeper_agent_run_receipt_append
  keeper_agent_run_receipt
  keeper_agent_run_sidecar
  keeper_agent_run_finalize_response
  keeper_agent_result
  keeper_provider_runtime_boundary
  keeper_agent_error
  keeper_run_tools_hooks
  keeper_run_tools_search
  keeper_run_tools_setup
  keeper_turn_driver_provider_attempt
  keeper_turn_driver
  keeper_turn_driver_helpers
  keeper_turn_driver_try_provider
  keeper_turn_driver_try_runtime
  keeper_turn_driver_wrappers
  keeper_unified_metrics_json_support
  keeper_unified_metrics_support
  keeper_unified_metrics_utils
  keeper_unified_trace_metadata
  keeper_unified_metrics_noop
  keeper_unified_metrics_span
  keeper_unified_metrics_counter
  keeper_unified_metrics_histogram
  keeper_unified_metrics_gauge
  keeper_unified_metrics_up_down_counter
  keeper_unified_metrics
  keeper_unified_metrics_integration
  keeper_context_activate
  keeper_context_core_message_memory_append
  keeper_context_oas_env_json
  keeper_context_oas_env
  keeper_current_task_sync
  keeper_chat_store
  keeper_chat_types)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson ppx_inline_test ppx_blob))
 (libraries
  ; stdlib
  threads
  ; vendored lib
  yojson
  ; vendored lib unlocked
  ; not vendored yet
  uri
  ; external pinned
  eio
  eio_main
  ca_certs
  ; external opam
  fmt
  logs
  logs.fmt
  ptime
  ptime.clock.os
  mirage_crypto
  mirage_crypto_rng
  mirage_crypto_rng.lwt
  x509
  tls
  tls.eio
  httpaf
  httpaf-lwt
  httpaf-lwt-unix
  faraday-lwt-unix
  h2
  h2-lwt-unix
  conduit-lwt
  conduit-lwt-unix
  jsonm
  uutf
  hex
  base64
  digestif
  ke
  lambdaconf
  lambdaconf-lwt)
 (ocamlopt_flags
  (:include (project-files/clang-flags.sexp)))
 (c_library_flags
  (:include (project-files/clang-flags.sexp))))